# java-native-agent

./: .gitignore  README.md
DockerFile/: Dockerfile
instrument-clone/nativeagent/java/com/pang/nativeagent/example/: Agent.java
instrument-clone/nativeagent/java/com/pang/nativeagent/instrument/: ClassFileTransformer.java  Instrumentation.java  InstrumentationImpl.java  UnmodifiableClassException.java
instrument-clone/nativeagent/native/share/instrument/: JPLISAgent.c  JPLISAgent.h
instrument-wrapper/: README.md  build.sh  clean.sh  pom.xml
instrument-wrapper/Dockerfile/: Dockerfile
instrument-wrapper/src/main/java/com/pang/instrument_wrapper/: InstrumentWrapper.java  TestAgent.java
instrument-wrapper/src/main/native/: CMakeLists.txt  instrument_wrapper.c
nativeagent/: build.sh  clean.sh
nativeagent/java/com/pang/nativeagent/example/: MANIFEST.MF
nativeagent/java/com/pang/nativeagent/instrument/: ClassDefinition.java  IllegalClassFormatException.java  InstrumentationImpl.java  TransformerManager.java
nativeagent/native/: CMakeLists.txt
nativeagent/native/share/instrument/: InstrumentationImplNativeMethods.c  InvocationAdapter.c
